--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,41 @@ name: MaSuiteTeleportsBridge
 main: fi.matiaspaavilainen.masuiteteleports.MaSuiteTeleports
 version: 1.2.4
 author: Masagameplay
+commands:
+  spawn:
+    permission: masuiteteleports.spawn.teleport
+    description: Teleports to spawn
+  setspawn:
+    permission: masuiteteleports.spawn.set
+    aliases: [spawnset, createspawn]
+    description: Sets spawn point of the server
+  delspawn:
+    permission: masuiteteleports.spawn.delete
+    aliases: [spawndel, deletespawn]
+    description: Deletes spawn point of the server
+  tp:
+    permission: masuiteteleports.teleport.force
+    aliases: [teleport]
+    description: Teleports to given target
+  tphere:
+    permission: masuiteteleports.teleport.force.here
+    aliases: [teleporthere]
+    description: Teleports target to sender
+  tpall:
+    permission: masuiteteleports.teleport.force.all
+    aliases: [teleportall]
+    description: Teleports all of the players to sender
+  tpaccept:
+    permission: masuiteteleports.teleport.accept
+    aliases: [tpyes, teleportaccept]
+    description: Accepts teleportation request
+  tpdeny:
+    permission: masuiteteleports.teleport.deny
+    aliases: [tpno, teleportdeny]
+    description: Denies teleportation request
+  tpa:
+    permission: masuiteteleports.teleport.request
+    description: Sends teleportationg request to target's location
+  tpahere:
+    permission: masuiteteleports.teleport.here
+    description: Sends teleportation request to target to sender's location
