--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,16 @@
     <version>1.3</version>
     <build>
         <finalName>MaSuiteTeleportsBridge</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
         <defaultGoal>clean package install</defaultGoal>
         <resources>
             <resource>
