--- a/pom.xml
+++ b/pom.xml
@@ -23,9 +23,7 @@
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
-                <includes>
-                    <include>plugin.yml</include>
-                </includes>
+                <filtering>true</filtering>
             </resource>
         </resources>
     </build>
