--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MaSuiteTeleportsBridge
 main: fi.matiaspaavilainen.masuiteteleports.MaSuiteTeleports
-version: 1.2.4
+version: 1.3
 author: Masagameplay
 commands:
   spawn:
@@ -36,7 +36,7 @@ commands:
     description: Denies teleportation request
   tpa:
     permission: masuiteteleports.teleport.request
-    description: Sends teleportationg request to target's location
+    description: Sends teleportationg request to target
   tpahere:
     permission: masuiteteleports.teleport.here
-    description: Sends teleportation request to target to sender's location
+    description: Sends teleportation request to target
