Started back command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -40,3 +40,5 @@ commands:
   tpahere:
     permission: masuiteteleports.teleport.here
     description: Sends teleportation request to target
+  back:
+    permission: masuiteteleports.back
