Cleaning up the code

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -1,1 +1,1 @@
-on_active_command: "You have already a command in progress, try it agein in few seconds"
+on_active_command: "You have already a command in progress, try it again in few seconds"
