--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,2 +1,3 @@
-respawn-type: home #Available types none (to disable respawning), bed, home, spawn
-first-spawn: true
+respawn-type: none #Available types none (to disable respawning), bed, home, spawn
+spawn:
+  first: true
