--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: MaSuiteTeleportsBridge
 main: fi.matiaspaavilainen.masuiteteleports.MaSuiteTeleports
-version: 1.3.4.3
+version: 1.3.4.5
 author: Masagameplay
 commands:
   spawn:
@@ -40,5 +40,8 @@ commands:
   tpahere:
     permission: masuiteteleports.teleport.here
     description: Sends teleportation request to target
+  tpalock:
+    permission: masuiteteleports.teleport.lock
+    description: Locks request to accepting or denying them
   back:
     permission: masuiteteleports.back
