--- a/src/main/resources/syntax.yml
+++ b/src/main/resources/syntax.yml
@@ -2,7 +2,7 @@ tpa: "&cCorrect syntax: /tpa <player>"
 tpahere: "&cCorrect syntax: /tpahere <player>"
 tpaccept: "&cCorrect syntax: /tpaccept"
 tpdeny: "&cCorrect syntax: /tpdeny"
-tpalock: "&cCorrect syntax: /tpalock <accept/deny/yes/no>"
+tpalock: "&cCorrect syntax: /tpalock <accept/deny/yes/no/off>"
 tp:
   title: "&cCorrect syntaxes:"
   syntaxes:
